<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmPhotoCamera">



    <TextView
        android:id="@+id/photo_confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/are_you_happy_with_this_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/photo_preview"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/button_confirm_photo_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_confirmation_text"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_confirm_photo_camera"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/yes_proceed"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:theme="@style/ButtonPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_take_photo_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button_take_photo_again"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_sec"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/no_i_want_to_take_photo_once_again"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:theme="@style/ButtonPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>